Fix an issue with not clearing |selected_text_| when text selection range is empty (Mac)

After the CL (https://codereview.chromium.org/2240553003) on text selection
tracking (for OOPIF) the new implementation missed some minor details in
tracking text selection. Specificaly, the value of RWHVMac::selected_text_
is not cleared when reported text or range from renderer is empty.

This has caused a regression in context menu items where some of the items shown
could relate to the previous selection.

This CL will:
    1- Make sure |selected_text_| is cleared when reported text selection from
       renderer is empty.

    2- Makes sure the overal behavior is perserved from that of text selection
       before OOPIF-IME changes.

BUG=675514

Review-Url: https://codereview.chromium.org/2596303002
Cr-Commit-Position: refs/heads/master@{#440550}

Former-commit-id: a7d3c829829627d5739ee07b24c79ea97fc57886